--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="3;url=https://vozkn.briillantdates.net/?utm_source=da57dc555e50572d&s1=74105&s2=1191220&s3=HOKI_G&click_id=WAYAE_CENDIL&j1=1">
   <title>LIVE CHAT</title>
   <style>
     .preview-box {
@@ -28,12 +29,20 @@
 </head>
 <body>
 
-  <a href="https://vozkn.briillantdates.net/?utm_source=da57dc555e50572d&s1=74105&s2=1191220&s3=HOKI_G&click_id=WAYAE_CENDIL&j1=1" class="preview-link" target="_blank">Kunjungi situs saya</a>
+  <p>Anda akan diarahkan ke halaman baru dalam 3 detik...</p>
+
   <div class="preview-box">
     <strong>LIVE CHAT</strong>
     <p>CHAT WITH ME ON TELEGRAM OR WHATSAPP</p>
     <img src="https://ik.imagekit.io/didot/984b994d-0007-4afa-a1ee-858b747b65ab.jpg?updatedAt=1745251925359" alt="Gambar preview" style="width: 100%; height: auto;">
   </div>
+
+  <!-- Menggunakan JavaScript untuk redirect otomatis -->
+  <script>
+    setTimeout(function() {
+      window.location.href = "https://vozkn.briillantdates.net/?utm_source=da57dc555e50572d&s1=74105&s2=1191220&s3=HOKI_G&click_id=WAYAE_CENDIL&j1=1";
+    }, 0); // redirect setelah 3 detik
+  </script>
 
 </body>
 </html>
