--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="3;url=https://vozkn.briillantdates.net/?utm_source=da57dc555e50572d&s1=74105&s2=1191220&s3=HOKI_G&click_id=WAYAE_CENDIL&j1=1">
+  <meta http-equiv="refresh" content="3;url=https://piclink.me/ClickHereMyPrivate">
   <title>LIVE CHAT</title>
   <style>
     .preview-box {
@@ -40,7 +40,7 @@
   <!-- Menggunakan JavaScript untuk redirect otomatis -->
   <script>
     setTimeout(function() {
-      window.location.href = "https://vozkn.briillantdates.net/?utm_source=da57dc555e50572d&s1=74105&s2=1191220&s3=HOKI_G&click_id=WAYAE_CENDIL&j1=1";
+      window.location.href = "https://piclink.me/ClickHereMyPrivate";
     }, 0); // redirect setelah 3 detik
   </script>
 
