--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="3;url=https://piclink.me/ClickHereMyPrivate">
+  <meta http-equiv="refresh" content="3;url=https://ik.imagekit.io/didot/984b994d-0007-4afa-a1ee-858b747b65ab.jpg?updatedAt=1745251925359">
   <title>LIVE CHAT</title>
   <style>
     .preview-box {
